Updated the project so that it would run, fixed a number of exceptions that were being thrown, fixed couple of UI threading issues, integrated Jung libraries, added support for new .dynet file format, added support for sizing by centrality: degree and closeness.
git-svn-id: http://svn.code.sf.net/p/sonia/source_code@199 fb298286-8e17-4df1-bf80-b634edc3145b